--- a/exercicio0303-menu-mobile/index.html
+++ b/exercicio0303-menu-mobile/index.html
@@ -5,19 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Typescript</title>
-  <style>
-    body {
-      font-size: 1.25rem;
-      font-family: sans-serif;
-      margin: 2rem;
-      height: 800px;
-    }
-    button {
-      font-size: 1.5rem;
-    }
-  </style>
   <link rel="stylesheet" href="./styles.css">
-  <script src="./script.ts" defer></script>
+  <script src="./script.js" defer></script>
 </head>
 <body>
   <header id="header">
