--- a/aula06/index.html
+++ b/aula06/index.html
@@ -5,9 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Typescript Manipulação de dados</title>
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
-    <table>
+    <h2>Dados</h2>
+    <table id="transactions">
+      <thead>
+        <th>Nome</th>
+        <th>Email</th>
+        <th>Data</th>
+        <th>Compra</th>
+        <th>Pagamento</th>
+        <th>Status</th>
+      </thead>
+      <tbody></tbody>
+     
     </table>
     <script type="module" src="/src/main.ts"></script>
   </body>
