--- a/aula06/index.html
+++ b/aula06/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
+    <h2>Estatísticas</h2>
+    <table id="statistics">
+      <thead>
+        <th>Total</th>
+      </thead>
+      <tbody></tbody>
+    </table>
     <h2>Dados</h2>
     <table id="transactions">
       <thead>
