--- a/aula06/index.html
+++ b/aula06/index.html
@@ -9,12 +9,10 @@
   </head>
   <body>
     <h2>Estatísticas</h2>
-    <table id="statistics">
-      <thead>
-        <th>Total</th>
-      </thead>
-      <tbody></tbody>
-    </table>
+    <p id="total">Total: <span></span></p>
+    <div id="pagamento"></div>
+    <div id="status"></div>
+    <p id="dia">Dia com mais vendas: <span></span></p>
     <h2>Dados</h2>
     <table id="transactions">
       <thead>
